<resources>
    <string name="app_name">Contact</string>
    <string name="add_user">Add Contact</string>
    <string name="fetch_api_data">Fetch API Data</string>
    <string name="contact_list">Contact List</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email (Optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="contact">Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_website">Enter Website (Optional)</string>
    <string name="website">Website</string>
</resources>