<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/slate_gray"
    tools:context=".ui.adapter.UserAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            style="@style/TitleTextStyle"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/ContentTextStyle"
            android:text="@string/email" />

        <TextView
            android:id="@+id/tvPhone"
            style="@style/ContentTextStyle"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tvWeb"
            style="@style/ContentTextStyle"
            android:text="@string/website" />



    </LinearLayout>
</androidx.cardview.widget.CardView>
